# finis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  fltk.cpp  main.cpp  nana.cpp  test.c
app/: g_buffer_pipelines.cpp  main.c  main.cpp  pipeline.hpp  test_pipeline.cpp
ext_dls/: CMakeLists.txt  g_buffer.c  model_loader.cpp  pipeline0.cpp  pipelines.cpp  pl0.cpp  render_mgr.cpp  res0.cpp  test.c  test2.cpp
exts/: CMakeLists.txt  default_pl.c  deffer.cpp  g_buffer.c  gbuffer_pl.c  test.c  test_pl.c
include/: ass.hpp  buffer.hpp  ext.h  ext_defines.h  ext_loader.hpp  fi_ext.h  fi_gl.h  fi_tool.h  fi_vk.h  fl_ext.hpp  fl_flow.hpp  fltk.hpp  gl.h  glad.h  glms.hpp  gltf.h  image.hpp  key_code.hpp  model_loader.hpp  pass.hpp  res_loader.h  resources.hpp  shader_module.hpp  swapchain.hpp  task_thread_pool.hpp  tool.h  tools.hpp  vk.h  vk_base.hpp  vk_desc.h  vk_mesh.h  vk_mesh_t.h  vk_model.h  vk_model_t.h  vk_pipeline.h  vk_shader.h
include/engine/: frame_graph.hpp  particle.hpp  pipeline.hpp  render_graph.hpp  render_grapph.hpp  resource.hpp  scene.hpp  scene_comp.hpp
include/extensions/: cpp_defines.hpp  defines.h  dll.hpp  loader.hpp
include/fltk/: fl_ext.hpp  fl_flow.hpp
include/gfx/: fi_vk.h  gfx.h  res_loader.h  vk_desc.h  vk_mesh.h  vk_mesh_t.h  vk_pipeline.h
include/graphics/: animation_mgr.hpp  buffer.hpp  circular_span.hpp  directional_light.hpp  graphics.hpp  mesh.hpp  pass.hpp  pipeline.hpp  prim_data.hpp  prim_res.hpp  prims.hpp  render_mgr.hpp  render_target.hpp  res_anim.hpp  res_data.hpp  res_holder.hpp  res_loader.hpp  res_mesh.hpp  res_skin.hpp  res_structure.hpp  resources.hpp  shader.hpp  swapchain.hpp  texture.hpp  textures.hpp  vk_base.hpp
include/graphics2/: graphics.hpp  res_uploader.hpp  scene.hpp
include/mgrs/: render_mgr.hpp
include/proto/: render.h
include/renderer/: default.h  gbuffer.h
include/resources/: gltf_anim.hpp  gltf_file.hpp  gltf_structure.hpp
include/scene/: scene.hpp  tree.hpp
include/slang/: slang-tag-version.h
renderer/: CMakeLists.txt
renderer/deffer/: gbuffer.c  gbuffer.h  meta.c  meta.h
res/shaders/: 0.frag  0.frag.spv  0.vert  0.vert.spv  compile_test.bat  compile_to_glsl.bat  compile_to_spv.bat  compile_to_spv.sh  define.glslh  defines.slang  depth.vert  hello-world.spirv  prim.glslh  shader.bat  test.bat  test.glsl  test.slang  test.spirv  test.spv  test2.glsl  test2.slang  test2.spv  tools.slang  vert0.slang  vk0.vert  vulkan0.frag  vulkan0.vert
res/shaders/spvs/: test.spv  vk0_vert.spv
src/: CMakeLists.txt  ext_loader.cpp  fi_gl.c  fi_vk.c  gl.c  glad.c  gltf.c  head_impl.cpp  model_loader.cpp  pass.cpp  res_loader.c  resources.cpp  shader_module.cpp  swapchain.cpp  tool.c  vk.c  vk_base.cpp  vk_desc.c  vk_mesh.c  vk_mesh_t.c  vk_model.c  vk_model_t.c  vk_pipeline.c  vk_shader.c
src/engine/: CMakeLists.txt  frame_graph.cpp  particle.cpp  pipeline.cpp  render_graph.cpp  render_grapph.cpp  resource.cpp  scene.cpp
src/extensions/: CMakeLists.txt  dll.cpp  ext_loader.cpp  loader.cpp
src/gfx/: CMakeLists.txt  fi_vk.c  res_loader.c  vk_desc.c  vk_mesh.c  vk_mesh_t.c  vk_pipeline.c  vma_impl.cpp
src/graphics/: CMakeLists.txt  animation_mgr.cpp  buffer.cpp  circular_span.cpp  directional_light.cpp  graphics.cpp  mesh.cpp  pass.cpp  pipeline.cpp  prims.cpp  render_mgr.cpp  render_target.cpp  res_anim.cpp  res_holder.cpp  res_loader.cpp  res_mesh.cpp  res_skin.cpp  res_structure.cpp  shader.cpp  shader_module.cpp  swapchain.cpp  texture.cpp  textures.cpp  vk_base.cpp
src/graphics2/: CMakeLists.txt  buffer.cpp  graphics.cpp  res_uploader.cpp  scene.cpp  shader.cpp  swapchain.cpp
src/graphics2/fastgltf/: CMakeLists.txt
src/renderer/: CMakeLists.txt  default.c  gbuffer.c
src/resources/: CMakeLists.txt  gltf_anim.cpp  gltf_file.cpp  gltf_structure.cpp
src/scene/: CMakeLists.txt  scene.cpp  tree.cpp
