cmake_minimum_required(VERSION 3.20.0)
project(finis VERSION 0.1.0)

set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_C_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}")

add_subdirectory("exts")
add_subdirectory("src")
add_subdirectory("src/gfx")
add_subdirectory("src/renderer")

file(GLOB_RECURSE SRC "app/*.c")
add_executable(finis ${SRC})
target_include_directories(finis PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(finis finis_gfx)
target_link_libraries(finis finis_common)
target_link_libraries(finis finis_renderer)

if(MSVC)
    target_compile_options(finis PUBLIC /W4)
else()
    target_compile_options(finis PUBLIC -Wall)
endif()