set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_C_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/ext_dlls")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/ext_dlls")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/ext_dlls")

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_STATIC_LIBRARY_PREFIX "")

file(GLOB_RECURSE DLLS "*.c")

foreach(SCRIPT_FILE ${DLLS})
    get_filename_component(DLL_NAME ${SCRIPT_FILE} NAME_WLE)
    add_library(${DLL_NAME} SHARED ${SCRIPT_FILE})
    target_include_directories(${DLL_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/include")
    target_link_libraries(${DLL_NAME} PUBLIC finis_gfx)
    target_link_libraries(${DLL_NAME} PUBLIC finis_common)
    target_link_libraries(${DLL_NAME} PUBLIC finis_renderer)

    if(MSVC)
        target_compile_options(${DLL_NAME} PUBLIC /W4)
    else()
        target_compile_options(${DLL_NAME} PUBLIC -Wall)
    endif()
endforeach()