set(CMAKE_CXX_EXTENSIONS off)
set(CMAKE_C_EXTENSIONS off)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 17)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/exe)

file(GLOB_RECURSE GRAPHICS_SRC *.cpp)
add_library(finis_scene SHARED ${GRAPHICS_SRC})
target_include_directories(finis_scene PUBLIC ${CMAKE_SOURCE_DIR}/include)